分页功能+武术模板

--- a/pages/actReg/actRegUserList/actRegUserList.wxss
+++ b/pages/actReg/actRegUserList/actRegUserList.wxss
@@ -1,3 +1,4 @@
+@import '../../../templates/moreData/moreData.wxss';
 page{
   background:#f2f2f2;
   padding-bottom:20rpx;
@@ -75,7 +76,7 @@ page{
     background:transparent;
 }
 /* 更多 */
-.moreData{
+/* .moreData{
     width:200rpx;
     height:60rpx;
     font-size:28rpx;
@@ -90,4 +91,4 @@ page{
     line-height:60rpx;
     color:#7b7b7b;
     background:#efefef;
-}
+} */
