--- a/pages/courses/stuCourseList/stuCourseList.wxss
+++ b/pages/courses/stuCourseList/stuCourseList.wxss
@@ -56,12 +56,22 @@
     margin-right:20rpx;
     font-size:50rpx;
 }
-.noData{
-    width:100%;
+/* 更多 */
+.moreData{
+    width:200rpx;
     height:60rpx;
-    font-size:26rpx;
-    color:#7b7b7b;
-    text-align:center;
+    font-size:28rpx;
     line-height:60rpx;
-    background:transparent;
+    color:#fff;
+    background:#4993FE;
+    margin-top:20rpx;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
+    margin-top:20rpx;
 }
