--- a/pages/task/taskUserList/taskUserList.wxml
+++ b/pages/task/taskUserList/taskUserList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='taskUserContent' wx:for='{{pageData}}' wx:key='{{item.id}}'>
     <view class='taskUserStatus' style='background-color:{{item.bgColor}}'>{{item.status}}</view>
     <view class='taskUserTitle' bindtap='toInfo' data-courseid='{{item.id}}' data-pwd='{{item.password}}' data-starttime='{{item.start_time}}' data-endtime='{{item.end_time}}' data-title='{{item.title}}'>{{item.title}}</view>
@@ -12,5 +13,5 @@
     </view>
 </view>
 <!-- 更多 -->
-<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+<template  is="moreDataBtn" data='{{btnText:btnText}}' />
 
