--- a/pages/task/taskUserListInfo/taskUserListInfo.wxss
+++ b/pages/task/taskUserListInfo/taskUserListInfo.wxss
@@ -1,4 +1,5 @@
 @import '../../../utils/iconFont.wxss';
+@import '../../../templates/moreData/moreData.wxss';
 page{
     background:#f2f2f2;
     padding-bottom:30rpx;
