--- a/pages/videoClass/videoClassInfo/videoClassInfo.wxml
+++ b/pages/videoClass/videoClassInfo/videoClassInfo.wxml
@@ -36,4 +36,6 @@
             <view class='contentRelyRight'><text>{{item.content}}</text></view>
         </view>
     </view>
+    <!-- 更多 -->
+    <button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
 </view>
