--- a/pages/videoClass/videoClassStuList/videoClassStuList.wxml
+++ b/pages/videoClass/videoClassStuList/videoClassStuList.wxml
@@ -6,3 +6,5 @@
         <view class='classContentTitle'>{{item.title}}</view>
     </view>
 </view>
+<!-- 更多 -->
+<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
