--- a/pages/actReg/actRegUserList/actRegUserList.wxml
+++ b/pages/actReg/actRegUserList/actRegUserList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='empty'></view>
 <view class='actRegContent' wx:for='{{pageData}}' bindtap='toInfoPage' data-actid='{{item.id}}' wx:key='{{item.id}}'>
     <view class='actRegImage'><image src='{{item.cover.url}}' mode='aspectFill'></image></view>
@@ -9,5 +10,5 @@
     <view class='actRegRight'>截止:<text decode> {{item.end_time}}&nbsp;&nbsp;</text></view>
 </view>
 <!-- 更多 -->
-<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+<template  is="moreDataBtn" data='{{btnText:btnText}}' />
 
