--- a/pages/goodLesson/goodLessonPeople/goodLessonPeople.wxss
+++ b/pages/goodLesson/goodLessonPeople/goodLessonPeople.wxss
@@ -3,11 +3,6 @@
 page{
     height:100%;
 }
-.killPriceListWrap{
-    width:750rpx;
-    min-height:1207rpx;
-    background:#fff;
-}
 .killPriceListContet{
     padding-top:20rpx;
     width:710rpx;
@@ -57,22 +52,13 @@ page{
 }
 
 .collageListWrap{
-    width:750rpx;
+    width:100%;
     height:100%;
     position:fixed;
     top:0rpx;
     left:0rpx;
     z-index:1000;
-    background:#F5F5F5;  
-    /* position: fixed;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    /* flex-direction: column;
-    align-items: center; 
-    justify-content: center; 
-    background:#f5f5f5;
-    z-index:1000;  */
+    background:#F5F5F5;
 }
 .collagePersonListTop{
     width:690rpx;
@@ -112,4 +98,21 @@ page{
 }
 .price{
     color:#C41A16;
+}
+/* 更多 */
+.moreData{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
 }
