--- a/pages/goodLesson/manLessonList/manLessonList.wxml
+++ b/pages/goodLesson/manLessonList/manLessonList.wxml
@@ -1,5 +1,5 @@
 <view class='empty'></view>
-<view class='manListContent' wx:for='{{pageData}}'>
+<view class='manListContent' wx:for='{{pageData}}' wx:key='{{index}}'>
     <view class='manListContentTop' bindtap='toLessonInfo' data-id='{{item.act_nice_id}}' >{{item.title}}</view>
     <view class='manListContentMiddel'>
         <view class='ListContentMiddelLeft' bindtap='toLessonInfo' data-id='{{item.act_nice_id}}'>
