--- a/pages/killPrices/killPriceList/killPriceList.wxml
+++ b/pages/killPrices/killPriceList/killPriceList.wxml
@@ -9,8 +9,10 @@
             <text decode='true' bindtap='toPriceListInfo' data-index='{{index}}' data-actid='{{item.act_id}}' data-joinid='{{item.joiner_id}}'>.&nbsp;.&nbsp;.</text>
         </view>
     </view>
-    <view class='noData' hidden='{{showTitle}}'>无记录</view> 
+    <!-- 更多 -->
+    <button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
 </view>
+
 <view class='collageListWrap' hidden='{{isPersonInfo}}'>
     <view class='empty'></view>
     <view class='empty'></view>
@@ -29,6 +31,7 @@
     </view>
     <button bindtap='hiddenInfo'>返回</button>
 </view>
+
 <view class='collageListWrap' hidden='{{actReg}}'>
     <view class='empty'></view>
     <view class='empty'></view>
