--- a/pages/killPrices/killPriceList/killPriceList.wxss
+++ b/pages/killPrices/killPriceList/killPriceList.wxss
@@ -8,6 +8,7 @@ page{
     width:750rpx;
     min-height:1207rpx;
     background:#fff;
+    padding-bottom:20rpx;
 }
 .killPriceListContet{
     padding-top:20rpx;
@@ -54,7 +55,7 @@ page{
 }
 
 .collageListWrap{
-    width:750rpx;
+    width:100%;
     height:100%;
     position:fixed;
     top:0rpx;
@@ -102,12 +103,20 @@ page{
     color:#C41A16;
 }
 
-.noData{
-    width:100%;
+/* 更多 */
+.moreData{
+    width:200rpx;
     height:60rpx;
-    font-size:26rpx;
-    color:#7b7b7b;
-    text-align:center;
+    font-size:28rpx;
     line-height:60rpx;
-    background:transparent;
+    color:#fff;
+    background:#4993FE;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
 }
