--- a/pages/task/taskStuHomeInfo/taskStuHomeInfo.wxss
+++ b/pages/task/taskStuHomeInfo/taskStuHomeInfo.wxss
@@ -1,4 +1,5 @@
 @import '../../../utils/iconFont.wxss';
+@import '../../../templates/moreData/moreData.wxss';
 page{
     background:#F2F2F2;
 }
@@ -212,7 +213,7 @@ page{
     width:200rpx;
     height:200rpx;
     display:inline-block;
-    background:lightblue;
+    background:#fff;
     vertical-align:top;
     margin-top:10rpx;
 }
@@ -231,4 +232,8 @@ page{
     width:200rpx;
     height:200rpx;
     background:transparent;
+}
+.homeEmpty{
+    width:100%;
+    height:20rpx;
 }
