--- a/pages/videoClass/videoClassInfo/videoClassInfo.wxss
+++ b/pages/videoClass/videoClassInfo/videoClassInfo.wxss
@@ -188,3 +188,22 @@ page{
     vertical-align: top;
     margin-left:20rpx;
 }
+/* 更多 */
+.moreData{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+    margin-top:20rpx;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
+    margin-top:20rpx;
+}
