--- a/pages/videoClass/videoClassManList/videoClassManList.wxss
+++ b/pages/videoClass/videoClassManList/videoClassManList.wxss
@@ -1,7 +1,7 @@
 @import '../../../utils/iconFont.wxss';
 page{
     background:#F7F7F7;
-    padding-bottom:110rpx;
+    padding-bottom:120rpx;
 }
 /* 视频列表 */
 .manListWrap{
@@ -129,4 +129,23 @@ view.manListWrap:nth-child(1){
 }
 .otherOptContent view:nth-child(5){
     margin-top:10rpx;
+}
+/* 更多 */
+.moreData{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#fff;
+    background:#4993FE;
+    margin-top:20rpx;
+}
+.moreDataed{
+    width:200rpx;
+    height:60rpx;
+    font-size:28rpx;
+    line-height:60rpx;
+    color:#7b7b7b;
+    background:#efefef;
+    margin-top:20rpx;
 }
