--- a/pages/actReg/actRegManList/actRegManList.wxss
+++ b/pages/actReg/actRegManList/actRegManList.wxss
@@ -1,4 +1,5 @@
 @import '../../../utils/iconFont.wxss';
+@import '../../../templates/moreData/moreData.wxss';
 page{
     background:#F2F2F2;
     padding-bottom:110rpx;
@@ -125,21 +126,4 @@ button.contentBottomChild::after{
     color:#fff;
     text-align:center;
     font-size:30rpx;
-}
-/* 更多 */
-.moreData{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#fff;
-    background:#4993FE;
-}
-.moreDataed{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#7b7b7b;
-    background:#efefef;
 }
