--- a/pages/actReg/actRegUserInfo/actRegUserInfo.wxss
+++ b/pages/actReg/actRegUserInfo/actRegUserInfo.wxss
@@ -1,4 +1,5 @@
 @import '../../../utils/iconFont.wxss';
+@import '../../../templates/moreData/moreData.wxss';
 page{
     padding-bottom:20rpx;
 }
@@ -64,22 +65,7 @@ page{
     line-height:80rpx;
     margin-top:50rpx;
 }
-/* 更多 */
-.moreData{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#fff;
-    background:#4993FE;
-    margin-top:20rpx;
-}
-.moreDataed{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#7b7b7b;
-    background:#efefef;
-    margin-top:20rpx;
+.empty{
+    width:100%;
+    height:20rpx;
 }
