--- a/pages/collage/collageList/collageList.wxss
+++ b/pages/collage/collageList/collageList.wxss
@@ -1,3 +1,4 @@
+@import '../../../templates/moreData/moreData.wxss';
 page{
   background:#F5F5F5;
   padding-bottom:20rpx;
@@ -52,23 +53,4 @@ page{
     font-size:35rpx;
     text-align:center;
     font-weight:bold;
-}
-/* 更多 */
-.moreData{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#fff;
-    background:#4993FE;
-    margin-top:20rpx;
-}
-.moreDataed{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#7b7b7b;
-    background:#efefef;
-    margin-top:20rpx;
 }
