--- a/pages/collage/collagePersonInfo/collagePersonInfo.wxml
+++ b/pages/collage/collagePersonInfo/collagePersonInfo.wxml
@@ -42,7 +42,7 @@
                 <view class='divBoxChildMiddle'>{{item.nickname}}</view>
                 <view class='divBoxChildRight'>{{item.create_time}}</view>
             </view>
-            <view class='noData' hidden='{{isData}}'>没有团员</view>
+            <!-- <view class='noData' hidden='{{isData}}'>没有团员</view> -->
             <!-- 更多 -->
             <button class='{{className}}' bindtap='moreData' data-text='{{btnText}}' hidden='{{!isData}}'>{{btnText}}</button>
         </view>
