--- a/pages/killPrices/killPriceList/killPriceList.wxml
+++ b/pages/killPrices/killPriceList/killPriceList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='killPriceListWrap'>
     <view class='killPriceListContet' wx:for='{{userList}}' wx:key='{{index}}'>
         <view class='killPriceListTop' bindtap='toPricePerson'  data-id='{{item.act_nice_id}}' data-actid='{{item.act_id}}' data-joinerid='{{item.joiner_id}}' data-acttag='{{item.act_tag}}'>
@@ -10,7 +11,7 @@
         </view>
     </view>
     <!-- 更多 -->
-    <button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+    <template  is="moreDataBtn" data='{{btnText:btnText}}' />
 </view>
 
 <view class='collageListWrap' hidden='{{isPersonInfo}}'>
