--- a/pages/videoClass/videoClassStuList/videoClassStuList.wxss
+++ b/pages/videoClass/videoClassStuList/videoClassStuList.wxss
@@ -1,3 +1,4 @@
+@import '../../../templates/moreData/moreData.wxss';
 page{
     padding-bottom:20rpx;
 }
@@ -35,21 +36,4 @@ page{
 }
 view.videoClassContent:nth-child(even){
     margin-left:20rpx;
-}
-/* 更多 */
-.moreData{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#fff;
-    background:#4993FE;
-}
-.moreDataed{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#7b7b7b;
-    background:#efefef;
 }
