--- a/pages/videoClass/videoClassUserList/videoClassUserList.wxss
+++ b/pages/videoClass/videoClassUserList/videoClassUserList.wxss
@@ -1,4 +1,5 @@
 @import '../../../utils/iconFont.wxss';
+@import '../../../templates/moreData/moreData.wxss';
 /* page{
     background:#fff;
     padding-bottom:10rpx;
@@ -140,23 +141,4 @@ view.videoClassContent:nth-child(even){
     display:inline-block;
     line-height:50rpx;
     padding:0rpx 8rpx;
-}
-/* 更多 */
-.moreData{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#fff;
-    background:#4993FE;
-    margin-top:20rpx;
-}
-.moreDataed{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#7b7b7b;
-    background:#efefef;
-    margin-top:20rpx;
 }
