--- a/pages/actReg/actRegUserInfo/actRegUserInfo.wxml
+++ b/pages/actReg/actRegUserInfo/actRegUserInfo.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='actRegUserWrap' hidden='{{!isShow}}' wx:for='{{pageData}}' wx:key='index'>
     <view class='actRegTop'>
         <view class='actRegTopLeft'>
@@ -19,7 +20,8 @@
     </view>
 </view>
 <!-- 更多 -->
-<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+<view class='empty'></view>
+<template  is="moreDataBtn" data='{{btnText:btnText}}' />
 <view class='actRegUserInfoWrap' hidden='{{isShow}}'>
     <view class='empty'></view>
     <view class='userInfoContet'>
