--- a/pages/courses/courseUserList/courseUserList.wxss
+++ b/pages/courses/courseUserList/courseUserList.wxss
@@ -1,6 +1,12 @@
+@import '../../../templates/moreData/moreData.wxss';
 .userListWrap{
     width:750rpx;
     min-height:1207rpx;
+    padding-bottom:20rpx;
+}
+.userEmpty{
+    width:100%;
+    height:20rpx;
 }
 .userListContent{
     width:750rpx;
@@ -70,7 +76,7 @@
     position:fixed;
     bottom:50rpx;
     left:50%;
-    margin-left:-40rpx;
+    margin-left:180rpx;
     z-index:1000;
     text-indent:3rpx;
 }
