--- a/pages/courses/stuCourseList/stuCourseList.wxml
+++ b/pages/courses/stuCourseList/stuCourseList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='courseList' wx:for='{{pageData}}' wx:key='{{index}}'>
     <view class='courseListLeft' bindtap='toIndex'><image src='{{item.cover.url}}' mode='aspectFill'></image></view>
     <view class='courseListRight'>
@@ -9,4 +10,4 @@
     </view>
 </view>
 <!-- 更多 -->
-<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+<template  is="moreDataBtn" data='{{btnText:btnText}}' />
