--- a/pages/goodLesson/goodLessonList/goodLessonList.wxml
+++ b/pages/goodLesson/goodLessonList/goodLessonList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='lessonBanner'>
     <image src='https://wise.oss-cn-hangzhou.aliyuncs.com/app-static/lesson_one_banner.png' mode='scaleToFill' />
 </view>
@@ -18,4 +19,4 @@
     </view>
 </view>
 <!-- 更多 -->
-<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+<template  is="moreDataBtn" data='{{btnText:btnText}}' />
