--- a/pages/killPrices/killPersonList/killPersonList.wxml
+++ b/pages/killPrices/killPersonList/killPersonList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='personListWrap'>
     <!-- <view class='personListInputName'></view> -->
     <view class='personListContent' wx:for='{{userList}}'>
@@ -8,8 +9,9 @@
         </view>
         <view class='personListDate'>时间: {{item.create_time}}</view>
     </view>
+    <view class='empty'></view>
     <!-- 更多 -->
-    <button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+    <template  is="moreDataBtn" data='{{btnText:btnText}}' />
 </view>
 <view class='collagePersonList' hidden='{{isPersonInfo}}'>
     <view class='empty'></view>
