--- a/pages/killPrices/killPersonList/killPersonList.wxss
+++ b/pages/killPrices/killPersonList/killPersonList.wxss
@@ -1,3 +1,4 @@
+@import '../../../templates/moreData/moreData.wxss';
 page{
     background: #f5f5f5;
     padding-bottom:20rpx;
@@ -122,22 +123,4 @@ page{
     line-height: 60rpx;
     background: transparent;
 }
-/* 更多 */
-.moreData{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#fff;
-    background:#4993FE;
-    margin-top:20rpx;
-}
-.moreDataed{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#7b7b7b;
-    background:#efefef;
-    margin-top:20rpx;
-}
+
