--- a/pages/killPrices/killPriceManList/killPriceManList.wxml
+++ b/pages/killPrices/killPriceManList/killPriceManList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <!-- 页面功能 -->
 <view class='manListOpt'>
     <view bindtap='toback'>返回</view>
@@ -25,5 +26,6 @@
         <view bindtap='toSharePage' data-actid='{{item.id}}' data-title='{{item.title}}' data-acttag='{{item.act_tag}}'><text class='iconfont icon-share'></text> 分享</view>
     </view>
 </view>
+<view class='empty'></view>
 <!-- 更多 -->
-<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+<template  is="moreDataBtn" data='{{btnText:btnText}}' />
