--- a/pages/killPrices/killPriceManList/killPriceManList.wxss
+++ b/pages/killPrices/killPriceManList/killPriceManList.wxss
@@ -1,4 +1,5 @@
 @import '../../../utils/iconFont.wxss';
+@import '../../../templates/moreData/moreData.wxss';
 page{
     background:#F2F2F2;
     padding-bottom:110rpx;
@@ -121,22 +122,7 @@ page{
 .contentBottom>view:nth-child(2){
     color:#329ED3;
 }
-/* 更多 */
-.moreData{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#fff;
-    background:#4993FE;
-    margin-top:20rpx;
-}
-.moreDataed{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#7b7b7b;
-    background:#efefef;
-    margin-top:20rpx;
+.empty{
+    width:100%;
+    height:20rpx;
 }
