--- a/pages/videoClass/videoClassUserList/videoClassUserList.wxml
+++ b/pages/videoClass/videoClassUserList/videoClassUserList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='videoClassOptions'>
     <view class='optionsContent' bindtap='isContent' data-id='0'>
         <view class='optionsContentTop' style='background:#F89225'> 
@@ -47,6 +48,6 @@
         <view class='classContentTitle'>{{item.title}}</view>
     </view>
     <!-- 更多 -->
-    <button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+    <template  is="moreDataBtn" data='{{btnText:btnText}}' />
 </view>
 <view class='addressList' bindtap='goManList' hidden='{{isAdd}}'>＋</view>
