--- a/pages/videoVote/videoVoteStuList/videoVoteStuList.wxml
+++ b/pages/videoVote/videoVoteStuList/videoVoteStuList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='empty'></view>
 <view class='voteUserWrap' wx:for='{{pageData}}' wx:key='{{item.id}}' data-joinid='{{item.id}}' bindtap='toInfo'>
     <view class='voteUserContent'>
@@ -8,4 +9,4 @@
     <view class='voteUserTitle'>{{item.title}}</view>
 </view>
 <!-- 更多 -->
-<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+<template  is="moreDataBtn" data='{{btnText:btnText}}' />
