--- a/pages/videoVote/videoVoteStuList/videoVoteStuList.wxss
+++ b/pages/videoVote/videoVoteStuList/videoVoteStuList.wxss
@@ -1,3 +1,4 @@
+@import '../../../templates/moreData/moreData.wxss';
 page{
     background:#F4F4F4;
     padding-bottom:20rpx;
@@ -84,21 +85,4 @@ view.voteUserWrap:nth-child(1){
     text-align:center;
     line-height:60rpx;
     background:transparent;
-}
-/* 更多 */
-.moreData{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#fff;
-    background:#4993FE;
-}
-.moreDataed{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#7b7b7b;
-    background:#efefef;
 }
