--- a/pages/videoVote/videoVoteUserList/videoVoteUserList.wxml
+++ b/pages/videoVote/videoVoteUserList/videoVoteUserList.wxml
@@ -1,3 +1,4 @@
+<import src='../../../templates/moreData/moreData' />
 <view class='voteUserWrap' wx:for='{{pageData}}' wx:key='{{item.id}}' data-actid='{{item.id}}' bindtap='toInfo'>
     <view class='voteUserContent'>
         <image  src='{{item.cover.url}}' mode='widthFix'></image>
@@ -7,7 +8,8 @@
     </view>
     <view class='voteUserTitle'>{{item.title}}</view>
 </view>
+<view class='empty'></view>
 <!-- 更多 -->
-<button class='{{className}}' bindtap='moreData' data-text='{{btnText}}'>{{btnText}}</button>
+<template  is="moreDataBtn" data='{{btnText:btnText}}' />
 
 
