--- a/pages/videoVote/videoVoteUserList/videoVoteUserList.wxss
+++ b/pages/videoVote/videoVoteUserList/videoVoteUserList.wxss
@@ -1,3 +1,4 @@
+@import '../../../templates/moreData/moreData.wxss';
 page{
     background:#F4F4F4;
     padding-bottom:20rpx;
@@ -70,22 +71,7 @@ page{
 view.voteUserWrap:nth-child(1){
     margin-top:20rpx;
 }
-/* 更多 */
-.moreData{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#fff;
-    background:#4993FE;
-    margin-top:20rpx;
-}
-.moreDataed{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#7b7b7b;
-    background:#efefef;
-    margin-top:20rpx;
+.empty{
+    width:100%;
+    height:20rpx;
 }
