--- a/pages/videos/userVideoList/userVideoList.wxss
+++ b/pages/videos/userVideoList/userVideoList.wxss
@@ -1,3 +1,4 @@
+@import '../../../templates/moreData/moreData.wxss';
 page{
   background:#f2f2f2;
   padding-bottom:20rpx;
@@ -47,23 +48,4 @@ page{
 .empty{
     width:750rpx;
     height:20rpx;
-}
-/* 更多 */
-.moreData{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#fff;
-    background:#4993FE;
-    margin-top:20rpx;
-}
-.moreDataed{
-    width:200rpx;
-    height:60rpx;
-    font-size:28rpx;
-    line-height:60rpx;
-    color:#7b7b7b;
-    background:#efefef;
-     margin-top:20rpx;
 }
